[package]
name = "opencensus-trace"
version = "0.1.0"
authors = ["John Children <john.a.children@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1.0.0"
lazy_static = "1.2.0"
byteorder = "1.2.0"
rand_core = "0.3.0"
rand_xoshiro = "0.1.0"
io-context = "0.2.0"

[dev-dependencies]
criterion = "0.2.0"

[[bench]]
name = "propagation"
harness = false
